muda database para o H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url= jdbc:postgresql://localhost:15432/spring-recife
-spring.datasource.username=postgres
-spring.datasource.password=433UQM!
+spring.datasource.url=jdbc:h2:mem:spring-recife
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=sa
+spring.datasource.password=12345678
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
